--- a/SmartHome/SHDetailviewLivingroomStereoVC.xib
+++ b/SmartHome/SHDetailviewLivingroomStereoVC.xib
@@ -158,7 +158,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{707, 344}, {279, 23}}</string>
 						<reference key="NSSuperview" ref="766721923"/>
-						<reference key="NSNextKeyView" ref="318928426"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -169,7 +168,7 @@
 					<object class="IBUILabel" id="331012180">
 						<reference key="NSNextResponder" ref="766721923"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{709, 284}, {81, 31}}</string>
+						<string key="NSFrame">{{709, 279}, {81, 31}}</string>
 						<reference key="NSSuperview" ref="766721923"/>
 						<reference key="NSNextKeyView" ref="563137141"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -219,7 +218,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{614, 320}, {70, 70}}</string>
 						<reference key="NSSuperview" ref="766721923"/>
-						<reference key="NSNextKeyView" ref="775703615"/>
+						<reference key="NSNextKeyView" ref="318928426"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -343,6 +342,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{709, 306}, {275, 36}}</string>
 						<reference key="NSSuperview" ref="766721923"/>
+						<reference key="NSNextKeyView" ref="775703615"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -565,23 +565,7 @@
 								<float key="scoringTypeFloat">24</float>
 								<int key="contentType">2</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="401730924">
-								<reference key="firstItem" ref="331012180"/>
-								<int key="firstAttribute">5</int>
-								<int key="relation">0</int>
-								<reference key="secondItem" ref="122974079"/>
-								<int key="secondAttribute">5</int>
-								<float key="multiplier">1</float>
-								<object class="IBLayoutConstant" key="constant">
-									<double key="value">0.0</double>
-								</object>
-								<float key="priority">1000</float>
-								<reference key="containingView" ref="766721923"/>
-								<int key="scoringType">6</int>
-								<float key="scoringTypeFloat">24</float>
-								<int key="contentType">2</int>
-							</object>
-							<object class="IBNSLayoutConstraint" id="84304491">
+							<object class="IBNSLayoutConstraint" id="181411212">
 								<reference key="firstItem" ref="331012180"/>
 								<int key="firstAttribute">3</int>
 								<int key="relation">0</int>
@@ -589,7 +573,7 @@
 								<int key="secondAttribute">3</int>
 								<float key="multiplier">1</float>
 								<object class="IBLayoutConstant" key="constant">
-									<double key="value">284</double>
+									<double key="value">279</double>
 								</object>
 								<float key="priority">1000</float>
 								<reference key="containingView" ref="766721923"/>
@@ -597,12 +581,12 @@
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="279157185">
+							<object class="IBNSLayoutConstraint" id="401730924">
 								<reference key="firstItem" ref="331012180"/>
-								<int key="firstAttribute">3</int>
+								<int key="firstAttribute">5</int>
 								<int key="relation">0</int>
-								<reference key="secondItem" ref="180176251"/>
-								<int key="secondAttribute">3</int>
+								<reference key="secondItem" ref="122974079"/>
+								<int key="secondAttribute">5</int>
 								<float key="multiplier">1</float>
 								<object class="IBLayoutConstant" key="constant">
 									<double key="value">0.0</double>
@@ -837,6 +821,22 @@
 								<float key="scoringTypeFloat">29</float>
 								<int key="contentType">3</int>
 							</object>
+							<object class="IBNSLayoutConstraint" id="84304491">
+								<reference key="firstItem" ref="180176251"/>
+								<int key="firstAttribute">3</int>
+								<int key="relation">0</int>
+								<reference key="secondItem" ref="766721923"/>
+								<int key="secondAttribute">3</int>
+								<float key="multiplier">1</float>
+								<object class="IBLayoutConstant" key="constant">
+									<double key="value">284</double>
+								</object>
+								<float key="priority">1000</float>
+								<reference key="containingView" ref="766721923"/>
+								<int key="scoringType">3</int>
+								<float key="scoringTypeFloat">9</float>
+								<int key="contentType">3</int>
+							</object>
 							<object class="IBNSLayoutConstraint" id="159260110">
 								<reference key="firstItem" ref="180176251"/>
 								<int key="firstAttribute">9</int>
@@ -1050,14 +1050,14 @@
 							<reference ref="122974079"/>
 							<reference ref="76512038"/>
 							<reference ref="228268259"/>
-							<reference ref="1071937352"/>
 							<reference ref="180176251"/>
 							<reference ref="82147927"/>
 							<reference ref="145344435"/>
-							<reference ref="331012180"/>
 							<reference ref="563137141"/>
 							<reference ref="775703615"/>
+							<reference ref="331012180"/>
 							<reference ref="318928426"/>
+							<reference ref="1071937352"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -1650,16 +1650,6 @@
 						<reference key="parent" ref="563137141"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">405</int>
-						<reference key="object" ref="84304491"/>
-						<reference key="parent" ref="766721923"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">400</int>
-						<reference key="object" ref="279157185"/>
-						<reference key="parent" ref="766721923"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">483</int>
 						<reference key="object" ref="454787898"/>
 						<reference key="parent" ref="766721923"/>
@@ -1753,6 +1743,16 @@
 						<reference key="object" ref="248284169"/>
 						<reference key="parent" ref="766721923"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">525</int>
+						<reference key="object" ref="84304491"/>
+						<reference key="parent" ref="766721923"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">526</int>
+						<reference key="object" ref="181411212"/>
+						<reference key="parent" ref="766721923"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -1787,7 +1787,7 @@
 				<string key="188.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="199.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<array key="2.IBViewMetadataConstraints">
+				<array class="NSMutableArray" key="2.IBViewMetadataConstraints">
 					<reference ref="260372025"/>
 					<reference ref="607143635"/>
 					<reference ref="222183760"/>
@@ -1801,6 +1801,7 @@
 					<reference ref="91283258"/>
 					<reference ref="920450280"/>
 					<reference ref="159260110"/>
+					<reference ref="84304491"/>
 					<reference ref="727109735"/>
 					<reference ref="231596396"/>
 					<reference ref="150511846"/>
@@ -1815,9 +1816,8 @@
 					<reference ref="454787898"/>
 					<reference ref="134548431"/>
 					<reference ref="871968854"/>
-					<reference ref="279157185"/>
-					<reference ref="84304491"/>
 					<reference ref="401730924"/>
+					<reference ref="181411212"/>
 					<reference ref="627353841"/>
 					<reference ref="183057916"/>
 					<reference ref="440191203"/>
@@ -1877,8 +1877,6 @@
 					<reference ref="789460268"/>
 				</array>
 				<boolean value="NO" key="4.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
-				<string key="400.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="405.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="409.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="410.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="455.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -1912,6 +1910,8 @@
 				<string key="521.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="522.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="523.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="525.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="526.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="57.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="58.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="6.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -1932,7 +1932,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">524</int>
+			<int key="maxID">526</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
